--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,14 @@
   <groupId>nz.ac.massey.cs.251</groupId>
   <artifactId>Maven_Tutorial</artifactId>
   <version>1.0.0</version>
+  
+   <dependencies>
+	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+	<dependency>
+    		<groupId>com.google.guava</groupId>
+    		<artifactId>guava</artifactId>
+    		<version>30.1.1-jre</version>
+	</dependency>
+  </dependencies>
+ 
 </project>
